deployment/k8s/base/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: goquizvibe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:main
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-data
              mountPath: /var/lib/grafana
            - name: grafana-provisioning-datasources
              mountPath: /etc/grafana/provisioning/datasources/datasources.yml
              subPath: datasources.yml
            - name: grafana-provisioning-dashboards
              mountPath: /etc/grafana/provisioning/dashboards/dashboards.yml
              subPath: dashboards.yml
            - name: grafana-provisioning-dashboards
              mountPath: /etc/grafana/provisioning/dashboards/overview.json
              subPath: overview.json
            - name: grafana-provisioning-dashboards
              mountPath: /etc/grafana/provisioning/dashboards/quiz.json
              subPath: quiz.json
      volumes:
        - name: grafana-data
          persistentVolumeClaim:
            claimName: grafana-pvc
        - name: grafana-provisioning-datasources
          configMap:
            name: grafana-provisioning
            items:
              - key: datasources.yml
                path: datasources.yml
        - name: grafana-provisioning-dashboards
          configMap:
            name: grafana-provisioning
            items:
              - key: dashboards.yml
                path: dashboards.yml
              - key: overview.json
                path: overview.json
              - key: quiz.json
                path: quiz.json
