deployment/k8s/base/adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer-service
  namespace: goquizvibe
spec:
  selector:
    app: adminer
  ports:
    - port: 8080
      targetPort: 8080
