deployment/k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: goquizvibe
spec:
  selector:
    app: backend
  ports:
    - port: 443
      targetPort: 443
    - name: grpc
      port: 9100
      targetPort: 9100
