deployment/k8s/base/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: goquizvibe
spec:
  selector:
    app: nginx
  ports:
    - port: 9000
      targetPort: 9000
