deployment/k8s/base/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: goquizvibe
spec:
  selector:
    app: prometheus
  ports:
    - port: 9090
      targetPort: 9090
