deployment/k8s/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: goquizvibe
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
  clusterIP: None
